parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> errorProgram PROGRAM saveType ID saveProc { opVars changeCurrentScope opFunctions main } printTables
Rule 2     changeCurrentScope -> <empty>
Rule 3     saveType -> <empty>
Rule 4     saveProc -> <empty>
Rule 5     errorProgram -> <empty>
Rule 6     opVars -> vars
Rule 7     opVars -> empty
Rule 8     opFunctions -> function opFunctions
Rule 9     opFunctions -> empty
Rule 10    vars -> errorVars VARS declare
Rule 11    saveID -> <empty>
Rule 12    errorVars -> <empty>
Rule 13    type -> errorType INT
Rule 14    type -> FLOAT
Rule 15    type -> STRING
Rule 16    type -> BOOL
Rule 17    errorType -> <empty>
Rule 18    main -> errorMain MAIN saveCurrentTemps saveMain { opVars generateInitialQuadruple body } clearVarsTable
Rule 19    generateInitialQuadruple -> <empty>
Rule 20    saveMain -> <empty>
Rule 21    errorMain -> <empty>
Rule 22    instr -> basicStatements ;
Rule 23    instr -> condition
Rule 24    instr -> cycle
Rule 25    basicStatements -> assign
Rule 26    basicStatements -> funcCall
Rule 27    basicStatements -> print
Rule 28    basicStatements -> read
Rule 29    print -> PRINT PARINI exp performPrint cyPrint PARFIN
Rule 30    cyPrint -> , fix exp performPrint cyPrint
Rule 31    cyPrint -> empty
Rule 32    read -> READ PARINI ID saveVariable performRead cyRead PARFIN
Rule 33    cyRead -> , fix ID saveVariable performRead cyRead
Rule 34    cyRead -> empty
Rule 35    fix -> <empty>
Rule 36    declare -> basicDeclare
Rule 37    declare -> structDeclare
Rule 38    declare -> dictDeclare
Rule 39    init -> ASGN saveOperator errorInit initWith
Rule 40    errorInit -> <empty>
Rule 41    initWith -> expresion
Rule 42    initWith -> funcCall
Rule 43    initDict -> ASGN PARINI dictType : dictType PARFIN errorInitDict
Rule 44    errorInitDict -> <empty>
Rule 45    dictType -> errorDictType CTES
Rule 46    dictType -> cte
Rule 47    dictType -> ID
Rule 48    errorDictType -> <empty>
Rule 49    param -> saveType type errorParam ID cyTypeParam cyParam
Rule 50    errorParam -> <empty>
Rule 51    cyParam -> errorCyParam saveTypeParam saveID ; param
Rule 52    cyParam -> empty saveTypeParam saveID
Rule 53    cyTypeParam -> , saveTypeParam saveID ID cyTypeParam
Rule 54    cyTypeParam -> empty
Rule 55    saveTypeParam -> <empty>
Rule 56    errorCyParam -> <empty>
Rule 57    function -> errorFunction saveCurrentTemps FUNC saveType ID saveProc flagParameters PARINI opParameters PARFIN flagParameters opReturns } clearVarsTable
Rule 58    saveCurrentTemps -> <empty>
Rule 59    errorFunction -> <empty>
Rule 60    clearVarsTable -> <empty>
Rule 61    return -> errorReturn RETURN expresion saveReturnValue ;
Rule 62    saveReturnValue -> <empty>
Rule 63    errorReturn -> <empty>
Rule 64    opParameters -> param saveParamToDirProc errorOpParameters
Rule 65    opParameters -> empty
Rule 66    flagParameters -> <empty>
Rule 67    saveParamToDirProc -> <empty>
Rule 68    errorOpParameters -> <empty>
Rule 69    opReturns -> errorOpReturns RETURNS type saveReturnType { opVars saveQuadruple body return
Rule 70    opReturns -> { opVars saveQuadruple body
Rule 71    saveQuadruple -> <empty>
Rule 72    saveReturnType -> <empty>
Rule 73    errorOpReturns -> <empty>
Rule 74    basicDeclare -> saveType type errorBasicDeclare ID cyTypeParam saveID ; cyDeclare
Rule 75    errorBasicDeclare -> <empty>
Rule 76    structDeclare -> errorStructDeclare STRUCT struct ; cyDeclare
Rule 77    errorStructDeclare -> <empty>
Rule 78    dictDeclare -> errorDictDeclare DICT ID dict ; cyDeclare
Rule 79    errorDictDeclare -> <empty>
Rule 80    cyDeclare -> declare
Rule 81    cyDeclare -> empty
Rule 82    body -> errorBody cyInstruction
Rule 83    body -> empty
Rule 84    errorBody -> <empty>
Rule 85    cyInstruction -> instr body
Rule 86    cycle -> forCycle
Rule 87    cycle -> whileCycle
Rule 88    whileCycle -> errorWhileCycle WHILE saveReturn PARINI expresion PARFIN saveFalso { body } repeatWhile
Rule 89    repeatWhile -> <empty>
Rule 90    saveReturn -> <empty>
Rule 91    errorWhileCycle -> <empty>
Rule 92    forCycle -> errorForCycle FOR PARINI assign ; saveReturn expresion saveFalso ; saltoBody assign returnFor PARFIN { rellenaBody body } returnAssign
Rule 93    saltoBody -> <empty>
Rule 94    returnFor -> <empty>
Rule 95    rellenaBody -> <empty>
Rule 96    returnAssign -> <empty>
Rule 97    errorForCycle -> <empty>
Rule 98    assign -> ID saveVariable errorAssign assignOptions performAssign
Rule 99    errorAssign -> <empty>
Rule 100   assignOptions -> init
Rule 101   assignOptions -> initDict
Rule 102   assignOptions -> saveToDimensionStacks [ expresion verifyIndex ] assignMatrix accessStruct init
Rule 103   assignMatrix -> updateDimension [ expresion verifyIndex ] errorAssignMatrix
Rule 104   assignMatrix -> empty
Rule 105   errorAssignMatrix -> <empty>
Rule 106   funcCall -> ID checkFunction PARINI putFondo opParamCall takeFondo PARFIN checkNumParams
Rule 107   checkNumParams -> <empty>
Rule 108   checkFunction -> <empty>
Rule 109   opParamCall -> expresion checkParamType cyParamCall
Rule 110   opParamCall -> empty
Rule 111   cyParamCall -> , expresion checkParamType cyParamCall
Rule 112   cyParamCall -> empty
Rule 113   checkParamType -> <empty>
Rule 114   struct -> structType ID saveID createDimension [ CTED saveDimensionSize ] optionalMatrix secondLap
Rule 115   secondLap -> <empty>
Rule 116   saveDimensionSize -> <empty>
Rule 117   createDimension -> <empty>
Rule 118   structType -> saveType type
Rule 119   structType -> DICT dict
Rule 120   optionalMatrix -> createSecondDimension [ CTED saveSecondDimensionSize ]
Rule 121   optionalMatrix -> empty
Rule 122   saveSecondDimensionSize -> <empty>
Rule 123   createSecondDimension -> <empty>
Rule 124   condition -> errorCondition IF PARINI expresion PARFIN saveFalso { body } optionalElse rellenaFalso
Rule 125   errorCondition -> <empty>
Rule 126   optionalElse -> errorElse ELSE saveVerdadero { body }
Rule 127   optionalElse -> empty
Rule 128   errorElse -> <empty>
Rule 129   dict -> errorDict PARINI type : type PARFIN
Rule 130   errorDict -> <empty>
Rule 131   expresion -> sExp performAndOr cyExpresion errorExpresion
Rule 132   errorExpresion -> <empty>
Rule 133   cyExpresion -> AND saveOperator expresion
Rule 134   cyExpresion -> OR saveOperator expresion
Rule 135   cyExpresion -> empty
Rule 136   sExp -> exp errorOpSExp opSExp performRelational
Rule 137   opSExp -> EQ saveOperator exp
Rule 138   opSExp -> DIF saveOperator exp
Rule 139   opSExp -> LTOEQ saveOperator exp
Rule 140   opSExp -> GTOEQ saveOperator exp
Rule 141   opSExp -> GT saveOperator exp
Rule 142   opSExp -> LT saveOperator exp
Rule 143   opSExp -> empty
Rule 144   errorOpSExp -> <empty>
Rule 145   exp -> term performAddSub errorCyExp cyExp
Rule 146   cyExp -> PLUS saveOperator exp
Rule 147   cyExp -> MINUS saveOperator exp
Rule 148   cyExp -> empty
Rule 149   errorCyExp -> <empty>
Rule 150   term -> fact performMulDiv cyTerm
Rule 151   cyTerm -> MULT saveOperator errorFact term
Rule 152   cyTerm -> DIV saveOperator term
Rule 153   cyTerm -> RES saveOperator term
Rule 154   cyTerm -> empty
Rule 155   fact -> putFondo languageFunctions takeFondo
Rule 156   fact -> CTES saveConstantString
Rule 157   fact -> cte
Rule 158   fact -> funcCall
Rule 159   fact -> PARINI putFondo expresion PARFIN takeFondo
Rule 160   fact -> ID saveVariable opAccess errorOpAccess
Rule 161   languageFunctions -> NEG PARINI expresion performNeg PARFIN
Rule 162   languageFunctions -> AVG PARINI ID saveStructID , expresion performAvg PARFIN
Rule 163   saveStructID -> <empty>
Rule 164   performAvg -> <empty>
Rule 165   performNeg -> <empty>
Rule 166   errorFact -> <empty>
Rule 167   opAccess -> opStruct
Rule 168   opAccess -> opDictionary
Rule 169   opAccess -> empty
Rule 170   errorOpAccess -> <empty>
Rule 171   opStruct -> errorOpStruct saveToDimensionStacks [ expresion verifyIndex ] opMatrix accessStruct
Rule 172   accessStruct -> <empty>
Rule 173   verifyIndex -> <empty>
Rule 174   saveToDimensionStacks -> <empty>
Rule 175   errorOpStruct -> <empty>
Rule 176   opMatrix -> errorOpMatrix updateDimension [ expresion verifyIndex ]
Rule 177   opMatrix -> empty
Rule 178   updateDimension -> <empty>
Rule 179   errorOpMatrix -> <empty>
Rule 180   opDictionary -> . dictIndex
Rule 181   dictIndex -> FIRST
Rule 182   dictIndex -> LAST
Rule 183   cte -> CTED saveConstantInt
Rule 184   cte -> CTEF saveConstantFloat
Rule 185   cte -> TRUE saveConstantBool
Rule 186   cte -> FALSE saveConstantBool
Rule 187   empty -> <empty>
Rule 188   printTables -> <empty>
Rule 189   rellenaFalso -> <empty>
Rule 190   saveFalso -> <empty>
Rule 191   saveVerdadero -> <empty>
Rule 192   saveConstantInt -> <empty>
Rule 193   saveConstantFloat -> <empty>
Rule 194   saveConstantBool -> <empty>
Rule 195   saveConstantString -> <empty>
Rule 196   saveVariable -> <empty>
Rule 197   saveOperator -> <empty>
Rule 198   putFondo -> <empty>
Rule 199   takeFondo -> <empty>
Rule 200   performAssign -> <empty>
Rule 201   performMulDiv -> <empty>
Rule 202   performAddSub -> <empty>
Rule 203   performRelational -> <empty>
Rule 204   performAndOr -> <empty>
Rule 205   performPrint -> <empty>
Rule 206   performRead -> <empty>

Terminals, with rules where they appear

,                    : 30 33 53 111 162
.                    : 180
:                    : 43 129
;                    : 22 51 61 74 76 78 92 92
AND                  : 133
ASGN                 : 39 43
AVG                  : 162
BOOL                 : 16
CTED                 : 114 120 183
CTEF                 : 184
CTES                 : 45 156
DICT                 : 78 119
DIF                  : 138
DIV                  : 152
ELSE                 : 126
EQ                   : 137
FALSE                : 186
FIRST                : 181
FLOAT                : 14
FOR                  : 92
FUNC                 : 57
GT                   : 141
GTOEQ                : 140
ID                   : 1 32 33 47 49 53 57 74 78 98 106 114 160 162
IF                   : 124
INT                  : 13
LAST                 : 182
LT                   : 142
LTOEQ                : 139
MAIN                 : 18
MINUS                : 147
MULT                 : 151
NEG                  : 161
OR                   : 134
PARFIN               : 29 32 43 57 88 92 106 124 129 159 161 162
PARINI               : 29 32 43 57 88 92 106 124 129 159 161 162
PLUS                 : 146
PRINT                : 29
PROGRAM              : 1
READ                 : 32
RES                  : 153
RETURN               : 61
RETURNS              : 69
STRING               : 15
STRUCT               : 76
TRUE                 : 185
VARS                 : 10
WHILE                : 88
[                    : 102 103 114 120 171 176
]                    : 102 103 114 120 171 176
error                : 
{                    : 1 18 69 70 88 92 124 126
}                    : 1 18 57 88 92 124 126

Nonterminals, with rules where they appear

accessStruct         : 102 171
assign               : 25 92 92
assignMatrix         : 102
assignOptions        : 98
basicDeclare         : 36
basicStatements      : 22
body                 : 18 69 70 85 88 92 124 126
changeCurrentScope   : 1
checkFunction        : 106
checkNumParams       : 106
checkParamType       : 109 111
clearVarsTable       : 18 57
condition            : 23
createDimension      : 114
createSecondDimension : 120
cte                  : 46 157
cyDeclare            : 74 76 78
cyExp                : 145
cyExpresion          : 131
cyInstruction        : 82
cyParam              : 49
cyParamCall          : 109 111
cyPrint              : 29 30
cyRead               : 32 33
cyTerm               : 150
cyTypeParam          : 49 53 74
cycle                : 24
declare              : 10 80
dict                 : 78 119
dictDeclare          : 38
dictIndex            : 180
dictType             : 43 43
empty                : 7 9 31 34 52 54 65 81 83 104 110 112 121 127 135 143 148 154 169 177
errorAssign          : 98
errorAssignMatrix    : 103
errorBasicDeclare    : 74
errorBody            : 82
errorCondition       : 124
errorCyExp           : 145
errorCyParam         : 51
errorDict            : 129
errorDictDeclare     : 78
errorDictType        : 45
errorElse            : 126
errorExpresion       : 131
errorFact            : 151
errorForCycle        : 92
errorFunction        : 57
errorInit            : 39
errorInitDict        : 43
errorMain            : 18
errorOpAccess        : 160
errorOpMatrix        : 176
errorOpParameters    : 64
errorOpReturns       : 69
errorOpSExp          : 136
errorOpStruct        : 171
errorParam           : 49
errorProgram         : 1
errorReturn          : 61
errorStructDeclare   : 76
errorType            : 13
errorVars            : 10
errorWhileCycle      : 88
exp                  : 29 30 136 137 138 139 140 141 142 146 147
expresion            : 41 61 88 92 102 103 109 111 124 133 134 159 161 162 171 176
fact                 : 150
fix                  : 30 33
flagParameters       : 57 57
forCycle             : 86
funcCall             : 26 42 158
function             : 8
generateInitialQuadruple : 18
init                 : 100 102
initDict             : 101
initWith             : 39
instr                : 85
languageFunctions    : 155
main                 : 1
opAccess             : 160
opDictionary         : 168
opFunctions          : 1 8
opMatrix             : 171
opParamCall          : 106
opParameters         : 57
opReturns            : 57
opSExp               : 136
opStruct             : 167
opVars               : 1 18 69 70
optionalElse         : 124
optionalMatrix       : 114
param                : 51 64
performAddSub        : 145
performAndOr         : 131
performAssign        : 98
performAvg           : 162
performMulDiv        : 150
performNeg           : 161
performPrint         : 29 30
performRead          : 32 33
performRelational    : 136
print                : 27
printTables          : 1
program              : 0
putFondo             : 106 155 159
read                 : 28
rellenaBody          : 92
rellenaFalso         : 124
repeatWhile          : 88
return               : 69
returnAssign         : 92
returnFor            : 92
sExp                 : 131
saltoBody            : 92
saveConstantBool     : 185 186
saveConstantFloat    : 184
saveConstantInt      : 183
saveConstantString   : 156
saveCurrentTemps     : 18 57
saveDimensionSize    : 114
saveFalso            : 88 92 124
saveID               : 51 52 53 74 114
saveMain             : 18
saveOperator         : 39 133 134 137 138 139 140 141 142 146 147 151 152 153
saveParamToDirProc   : 64
saveProc             : 1 57
saveQuadruple        : 69 70
saveReturn           : 88 92
saveReturnType       : 69
saveReturnValue      : 61
saveSecondDimensionSize : 120
saveStructID         : 162
saveToDimensionStacks : 102 171
saveType             : 1 49 57 74 118
saveTypeParam        : 51 52 53
saveVariable         : 32 33 98 160
saveVerdadero        : 126
secondLap            : 114
struct               : 76
structDeclare        : 37
structType           : 114
takeFondo            : 106 155 159
term                 : 145 151 152 153
type                 : 49 69 74 118 129 129
updateDimension      : 103 176
vars                 : 6
verifyIndex          : 102 103 171 176
whileCycle           : 87

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . errorProgram PROGRAM saveType ID saveProc { opVars changeCurrentScope opFunctions main } printTables
    (5) errorProgram -> .

    PROGRAM         reduce using rule 5 (errorProgram -> .)

    errorProgram                   shift and go to state 2
    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> errorProgram . PROGRAM saveType ID saveProc { opVars changeCurrentScope opFunctions main } printTables

    PROGRAM         shift and go to state 3


state 3

    (1) program -> errorProgram PROGRAM . saveType ID saveProc { opVars changeCurrentScope opFunctions main } printTables
    (3) saveType -> .

    ID              reduce using rule 3 (saveType -> .)

    saveType                       shift and go to state 4

state 4

    (1) program -> errorProgram PROGRAM saveType . ID saveProc { opVars changeCurrentScope opFunctions main } printTables

    ID              shift and go to state 5


state 5

    (1) program -> errorProgram PROGRAM saveType ID . saveProc { opVars changeCurrentScope opFunctions main } printTables
    (4) saveProc -> .

    {               reduce using rule 4 (saveProc -> .)

    saveProc                       shift and go to state 6

state 6

    (1) program -> errorProgram PROGRAM saveType ID saveProc . { opVars changeCurrentScope opFunctions main } printTables

    {               shift and go to state 7


state 7

    (1) program -> errorProgram PROGRAM saveType ID saveProc { . opVars changeCurrentScope opFunctions main } printTables
    (6) opVars -> . vars
    (7) opVars -> . empty
    (10) vars -> . errorVars VARS declare
    (187) empty -> .
    (12) errorVars -> .

    MAIN            reduce using rule 187 (empty -> .)
    FUNC            reduce using rule 187 (empty -> .)
    VARS            reduce using rule 12 (errorVars -> .)

    vars                           shift and go to state 8
    opVars                         shift and go to state 9
    errorVars                      shift and go to state 10
    empty                          shift and go to state 11

state 8

    (6) opVars -> vars .

    ID              reduce using rule 6 (opVars -> vars .)
    PRINT           reduce using rule 6 (opVars -> vars .)
    READ            reduce using rule 6 (opVars -> vars .)
    IF              reduce using rule 6 (opVars -> vars .)
    FOR             reduce using rule 6 (opVars -> vars .)
    WHILE           reduce using rule 6 (opVars -> vars .)
    }               reduce using rule 6 (opVars -> vars .)
    MAIN            reduce using rule 6 (opVars -> vars .)
    FUNC            reduce using rule 6 (opVars -> vars .)
    RETURN          reduce using rule 6 (opVars -> vars .)


state 9

    (1) program -> errorProgram PROGRAM saveType ID saveProc { opVars . changeCurrentScope opFunctions main } printTables
    (2) changeCurrentScope -> .

    MAIN            reduce using rule 2 (changeCurrentScope -> .)
    FUNC            reduce using rule 2 (changeCurrentScope -> .)

    changeCurrentScope             shift and go to state 12

state 10

    (10) vars -> errorVars . VARS declare

    VARS            shift and go to state 13


state 11

    (7) opVars -> empty .

    ID              reduce using rule 7 (opVars -> empty .)
    PRINT           reduce using rule 7 (opVars -> empty .)
    READ            reduce using rule 7 (opVars -> empty .)
    IF              reduce using rule 7 (opVars -> empty .)
    FOR             reduce using rule 7 (opVars -> empty .)
    WHILE           reduce using rule 7 (opVars -> empty .)
    }               reduce using rule 7 (opVars -> empty .)
    MAIN            reduce using rule 7 (opVars -> empty .)
    FUNC            reduce using rule 7 (opVars -> empty .)
    RETURN          reduce using rule 7 (opVars -> empty .)


state 12

    (1) program -> errorProgram PROGRAM saveType ID saveProc { opVars changeCurrentScope . opFunctions main } printTables
    (8) opFunctions -> . function opFunctions
    (9) opFunctions -> . empty
    (57) function -> . errorFunction saveCurrentTemps FUNC saveType ID saveProc flagParameters PARINI opParameters PARFIN flagParameters opReturns } clearVarsTable
    (187) empty -> .
    (59) errorFunction -> .

    MAIN            reduce using rule 187 (empty -> .)
    FUNC            reduce using rule 59 (errorFunction -> .)

    function                       shift and go to state 16
    errorFunction                  shift and go to state 17
    empty                          shift and go to state 15
    opFunctions                    shift and go to state 14

state 13

    (10) vars -> errorVars VARS . declare
    (36) declare -> . basicDeclare
    (37) declare -> . structDeclare
    (38) declare -> . dictDeclare
    (74) basicDeclare -> . saveType type errorBasicDeclare ID cyTypeParam saveID ; cyDeclare
    (76) structDeclare -> . errorStructDeclare STRUCT struct ; cyDeclare
    (78) dictDeclare -> . errorDictDeclare DICT ID dict ; cyDeclare
    (3) saveType -> .
    (77) errorStructDeclare -> .
    (79) errorDictDeclare -> .

    FLOAT           reduce using rule 3 (saveType -> .)
    STRING          reduce using rule 3 (saveType -> .)
    BOOL            reduce using rule 3 (saveType -> .)
    INT             reduce using rule 3 (saveType -> .)
    STRUCT          reduce using rule 77 (errorStructDeclare -> .)
    DICT            reduce using rule 79 (errorDictDeclare -> .)

    dictDeclare                    shift and go to state 18
    saveType                       shift and go to state 19
    errorDictDeclare               shift and go to state 20
    structDeclare                  shift and go to state 21
    errorStructDeclare             shift and go to state 22
    basicDeclare                   shift and go to state 23
    declare                        shift and go to state 24

state 14

    (1) program -> errorProgram PROGRAM saveType ID saveProc { opVars changeCurrentScope opFunctions . main } printTables
    (18) main -> . errorMain MAIN saveCurrentTemps saveMain { opVars generateInitialQuadruple body } clearVarsTable
    (21) errorMain -> .

    MAIN            reduce using rule 21 (errorMain -> .)

    main                           shift and go to state 25
    errorMain                      shift and go to state 26

state 15

    (9) opFunctions -> empty .

    MAIN            reduce using rule 9 (opFunctions -> empty .)


state 16

    (8) opFunctions -> function . opFunctions
    (8) opFunctions -> . function opFunctions
    (9) opFunctions -> . empty
    (57) function -> . errorFunction saveCurrentTemps FUNC saveType ID saveProc flagParameters PARINI opParameters PARFIN flagParameters opReturns } clearVarsTable
    (187) empty -> .
    (59) errorFunction -> .

    MAIN            reduce using rule 187 (empty -> .)
    FUNC            reduce using rule 59 (errorFunction -> .)

    function                       shift and go to state 16
    errorFunction                  shift and go to state 17
    empty                          shift and go to state 15
    opFunctions                    shift and go to state 27

state 17

    (57) function -> errorFunction . saveCurrentTemps FUNC saveType ID saveProc flagParameters PARINI opParameters PARFIN flagParameters opReturns } clearVarsTable
    (58) saveCurrentTemps -> .

    FUNC            reduce using rule 58 (saveCurrentTemps -> .)

    saveCurrentTemps               shift and go to state 28

state 18

    (38) declare -> dictDeclare .

    MAIN            reduce using rule 38 (declare -> dictDeclare .)
    FUNC            reduce using rule 38 (declare -> dictDeclare .)
    }               reduce using rule 38 (declare -> dictDeclare .)
    ID              reduce using rule 38 (declare -> dictDeclare .)
    PRINT           reduce using rule 38 (declare -> dictDeclare .)
    READ            reduce using rule 38 (declare -> dictDeclare .)
    IF              reduce using rule 38 (declare -> dictDeclare .)
    FOR             reduce using rule 38 (declare -> dictDeclare .)
    WHILE           reduce using rule 38 (declare -> dictDeclare .)
    RETURN          reduce using rule 38 (declare -> dictDeclare .)


state 19

    (74) basicDeclare -> saveType . type errorBasicDeclare ID cyTypeParam saveID ; cyDeclare
    (13) type -> . errorType INT
    (14) type -> . FLOAT
    (15) type -> . STRING
    (16) type -> . BOOL
    (17) errorType -> .

    FLOAT           shift and go to state 29
    STRING          shift and go to state 30
    BOOL            shift and go to state 32
    INT             reduce using rule 17 (errorType -> .)

    errorType                      shift and go to state 31
    type                           shift and go to state 33

state 20

    (78) dictDeclare -> errorDictDeclare . DICT ID dict ; cyDeclare

    DICT            shift and go to state 34


state 21

    (37) declare -> structDeclare .

    MAIN            reduce using rule 37 (declare -> structDeclare .)
    FUNC            reduce using rule 37 (declare -> structDeclare .)
    }               reduce using rule 37 (declare -> structDeclare .)
    ID              reduce using rule 37 (declare -> structDeclare .)
    PRINT           reduce using rule 37 (declare -> structDeclare .)
    READ            reduce using rule 37 (declare -> structDeclare .)
    IF              reduce using rule 37 (declare -> structDeclare .)
    FOR             reduce using rule 37 (declare -> structDeclare .)
    WHILE           reduce using rule 37 (declare -> structDeclare .)
    RETURN          reduce using rule 37 (declare -> structDeclare .)


state 22

    (76) structDeclare -> errorStructDeclare . STRUCT struct ; cyDeclare

    STRUCT          shift and go to state 35


state 23

    (36) declare -> basicDeclare .

    MAIN            reduce using rule 36 (declare -> basicDeclare .)
    FUNC            reduce using rule 36 (declare -> basicDeclare .)
    }               reduce using rule 36 (declare -> basicDeclare .)
    ID              reduce using rule 36 (declare -> basicDeclare .)
    PRINT           reduce using rule 36 (declare -> basicDeclare .)
    READ            reduce using rule 36 (declare -> basicDeclare .)
    IF              reduce using rule 36 (declare -> basicDeclare .)
    FOR             reduce using rule 36 (declare -> basicDeclare .)
    WHILE           reduce using rule 36 (declare -> basicDeclare .)
    RETURN          reduce using rule 36 (declare -> basicDeclare .)


state 24

    (10) vars -> errorVars VARS declare .

    ID              reduce using rule 10 (vars -> errorVars VARS declare .)
    PRINT           reduce using rule 10 (vars -> errorVars VARS declare .)
    READ            reduce using rule 10 (vars -> errorVars VARS declare .)
    IF              reduce using rule 10 (vars -> errorVars VARS declare .)
    FOR             reduce using rule 10 (vars -> errorVars VARS declare .)
    WHILE           reduce using rule 10 (vars -> errorVars VARS declare .)
    }               reduce using rule 10 (vars -> errorVars VARS declare .)
    MAIN            reduce using rule 10 (vars -> errorVars VARS declare .)
    FUNC            reduce using rule 10 (vars -> errorVars VARS declare .)
    RETURN          reduce using rule 10 (vars -> errorVars VARS declare .)


state 25

    (1) program -> errorProgram PROGRAM saveType ID saveProc { opVars changeCurrentScope opFunctions main . } printTables

    }               shift and go to state 36


state 26

    (18) main -> errorMain . MAIN saveCurrentTemps saveMain { opVars generateInitialQuadruple body } clearVarsTable

    MAIN            shift and go to state 37


state 27

    (8) opFunctions -> function opFunctions .

    MAIN            reduce using rule 8 (opFunctions -> function opFunctions .)


state 28

    (57) function -> errorFunction saveCurrentTemps . FUNC saveType ID saveProc flagParameters PARINI opParameters PARFIN flagParameters opReturns } clearVarsTable

    FUNC            shift and go to state 38


state 29

    (14) type -> FLOAT .

    PARFIN          reduce using rule 14 (type -> FLOAT .)
    ID              reduce using rule 14 (type -> FLOAT .)
    :               reduce using rule 14 (type -> FLOAT .)
    {               reduce using rule 14 (type -> FLOAT .)


state 30

    (15) type -> STRING .

    PARFIN          reduce using rule 15 (type -> STRING .)
    ID              reduce using rule 15 (type -> STRING .)
    :               reduce using rule 15 (type -> STRING .)
    {               reduce using rule 15 (type -> STRING .)


state 31

    (13) type -> errorType . INT

    INT             shift and go to state 39


state 32

    (16) type -> BOOL .

    PARFIN          reduce using rule 16 (type -> BOOL .)
    ID              reduce using rule 16 (type -> BOOL .)
    :               reduce using rule 16 (type -> BOOL .)
    {               reduce using rule 16 (type -> BOOL .)


state 33

    (74) basicDeclare -> saveType type . errorBasicDeclare ID cyTypeParam saveID ; cyDeclare
    (75) errorBasicDeclare -> .

    ID              reduce using rule 75 (errorBasicDeclare -> .)

    errorBasicDeclare              shift and go to state 40

state 34

    (78) dictDeclare -> errorDictDeclare DICT . ID dict ; cyDeclare

    ID              shift and go to state 41


state 35

    (76) structDeclare -> errorStructDeclare STRUCT . struct ; cyDeclare
    (114) struct -> . structType ID saveID createDimension [ CTED saveDimensionSize ] optionalMatrix secondLap
    (118) structType -> . saveType type
    (119) structType -> . DICT dict
    (3) saveType -> .

    DICT            shift and go to state 44
    FLOAT           reduce using rule 3 (saveType -> .)
    STRING          reduce using rule 3 (saveType -> .)
    BOOL            reduce using rule 3 (saveType -> .)
    INT             reduce using rule 3 (saveType -> .)

    structType                     shift and go to state 42
    struct                         shift and go to state 43
    saveType                       shift and go to state 45

state 36

    (1) program -> errorProgram PROGRAM saveType ID saveProc { opVars changeCurrentScope opFunctions main } . printTables
    (188) printTables -> .

    $end            reduce using rule 188 (printTables -> .)

    printTables                    shift and go to state 46

state 37

    (18) main -> errorMain MAIN . saveCurrentTemps saveMain { opVars generateInitialQuadruple body } clearVarsTable
    (58) saveCurrentTemps -> .

    {               reduce using rule 58 (saveCurrentTemps -> .)

    saveCurrentTemps               shift and go to state 47

state 38

    (57) function -> errorFunction saveCurrentTemps FUNC . saveType ID saveProc flagParameters PARINI opParameters PARFIN flagParameters opReturns } clearVarsTable
    (3) saveType -> .

    ID              reduce using rule 3 (saveType -> .)

    saveType                       shift and go to state 48

state 39

    (13) type -> errorType INT .

    PARFIN          reduce using rule 13 (type -> errorType INT .)
    ID              reduce using rule 13 (type -> errorType INT .)
    :               reduce using rule 13 (type -> errorType INT .)
    {               reduce using rule 13 (type -> errorType INT .)


state 40

    (74) basicDeclare -> saveType type errorBasicDeclare . ID cyTypeParam saveID ; cyDeclare

    ID              shift and go to state 49


state 41

    (78) dictDeclare -> errorDictDeclare DICT ID . dict ; cyDeclare
    (129) dict -> . errorDict PARINI type : type PARFIN
    (130) errorDict -> .

    PARINI          reduce using rule 130 (errorDict -> .)

    dict                           shift and go to state 51
    errorDict                      shift and go to state 50

state 42

    (114) struct -> structType . ID saveID createDimension [ CTED saveDimensionSize ] optionalMatrix secondLap

    ID              shift and go to state 52


state 43

    (76) structDeclare -> errorStructDeclare STRUCT struct . ; cyDeclare

    ;               shift and go to state 53


state 44

    (119) structType -> DICT . dict
    (129) dict -> . errorDict PARINI type : type PARFIN
    (130) errorDict -> .

    PARINI          reduce using rule 130 (errorDict -> .)

    dict                           shift and go to state 54
    errorDict                      shift and go to state 50

state 45

    (118) structType -> saveType . type
    (13) type -> . errorType INT
    (14) type -> . FLOAT
    (15) type -> . STRING
    (16) type -> . BOOL
    (17) errorType -> .

    FLOAT           shift and go to state 29
    STRING          shift and go to state 30
    BOOL            shift and go to state 32
    INT             reduce using rule 17 (errorType -> .)

    errorType                      shift and go to state 31
    type                           shift and go to state 55

state 46

    (1) program -> errorProgram PROGRAM saveType ID saveProc { opVars changeCurrentScope opFunctions main } printTables .

    $end            reduce using rule 1 (program -> errorProgram PROGRAM saveType ID saveProc { opVars changeCurrentScope opFunctions main } printTables .)


state 47

    (18) main -> errorMain MAIN saveCurrentTemps . saveMain { opVars generateInitialQuadruple body } clearVarsTable
    (20) saveMain -> .

    {               reduce using rule 20 (saveMain -> .)

    saveMain                       shift and go to state 56

state 48

    (57) function -> errorFunction saveCurrentTemps FUNC saveType . ID saveProc flagParameters PARINI opParameters PARFIN flagParameters opReturns } clearVarsTable

    ID              shift and go to state 57


state 49

    (74) basicDeclare -> saveType type errorBasicDeclare ID . cyTypeParam saveID ; cyDeclare
    (53) cyTypeParam -> . , saveTypeParam saveID ID cyTypeParam
    (54) cyTypeParam -> . empty
    (187) empty -> .

    ,               shift and go to state 58
    ;               reduce using rule 187 (empty -> .)

    empty                          shift and go to state 59
    cyTypeParam                    shift and go to state 60

state 50

    (129) dict -> errorDict . PARINI type : type PARFIN

    PARINI          shift and go to state 61


state 51

    (78) dictDeclare -> errorDictDeclare DICT ID dict . ; cyDeclare

    ;               shift and go to state 62


state 52

    (114) struct -> structType ID . saveID createDimension [ CTED saveDimensionSize ] optionalMatrix secondLap
    (11) saveID -> .

    [               reduce using rule 11 (saveID -> .)

    saveID                         shift and go to state 63

state 53

    (76) structDeclare -> errorStructDeclare STRUCT struct ; . cyDeclare
    (80) cyDeclare -> . declare
    (81) cyDeclare -> . empty
    (36) declare -> . basicDeclare
    (37) declare -> . structDeclare
    (38) declare -> . dictDeclare
    (187) empty -> .
    (74) basicDeclare -> . saveType type errorBasicDeclare ID cyTypeParam saveID ; cyDeclare
    (76) structDeclare -> . errorStructDeclare STRUCT struct ; cyDeclare
    (78) dictDeclare -> . errorDictDeclare DICT ID dict ; cyDeclare
    (3) saveType -> .
    (77) errorStructDeclare -> .
    (79) errorDictDeclare -> .
